// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`post edit form has the expected HTML when all checks are inactive (i.e. all data is present) 1`] = `
<div
  style="background-color: rgb(255, 250, 250);"
>
  <div
    class="row"
  >
    <div
      class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3"
    >
      <h4
        style="color: rgb(235, 113, 180); text-align: center;"
      >
        Create post
      </h4>
    </div>
  </div>
   
  <div>
    <div
      class="row"
    >
      <div
        class="col-xs-12 col-sm-8 col-sm-offset-2"
      >
        <div
          class="floatable-bordered"
        >
          <h2
            style="text-align: center;"
          >
            What do you need
          </h2>
           
          <br />
        </div>
         
        <div
          class="floatable-bordered floatable-bordered-bottom"
        >
          <br />
           
          <div
            class="row"
          >
            <div
              class="col-xs-10 col-xs-offset-1"
            >
              <!---->
               
              <div
                class="form-group"
              >
                <label
                  for="title"
                >
                  Title
                </label>
                 
                <input
                  class="form-control"
                  id="title"
                  type="text"
                />
              </div>
               
              <!---->
               
              <div
                class="form-group"
              >
                <label>
                  Give some more details
                </label>
                <br />
                 
                <textarea
                  class="form-control"
                  placeholder="Give the details about what you need, things to think about:
- Telling us a bit about the background of why you need help
- Give plenty of detail about the activity
- Dig down into details of any specialist skills / experience needed
- Tell us what kind of person you would like to help out
- Be nice!"
                  rows="5"
                />
              </div>
            </div>
          </div>
        </div>
         
        <br />
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="row"
    >
      <div
        class="col-xs-12 col-sm-8 col-sm-offset-2"
      >
        <div
          class="floatable-bordered"
        >
          <h2
            style="text-align: center;"
          >
            Location
          </h2>
           
          <br />
        </div>
         
        <div
          class="floatable-bordered floatable-bordered-bottom"
        >
          <br />
           
          <div
            class="row"
          >
            <div
              class="col-xs-10 col-xs-offset-1"
            >
              <!---->
               
              <label>
                Where do you need help?
              </label>
               
              <div
                class="form-group"
              >
                <label
                  class="checkbox-inline"
                >
                  <input
                    id="remoteLocation"
                    type="checkbox"
                    value="true"
                  />
                  Can help be given remotely?
      
                </label>
              </div>
               
              <div
                class="form-group"
              >
                <label>
                  At specific locations:
                </label>
                 
                <div>
                   
                  <select
                    class="form-control list-item"
                  >
                    <option
                      disabled="disabled"
                      value=""
                    />
                     
                  </select>
                   
                  <button
                    class="btn btn-primary"
                    disabled="disabled"
                  >
                    Add another
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <br />
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="row"
    >
      <div
        class="col-xs-12 col-sm-8 col-sm-offset-2"
      >
        <div
          class="floatable-bordered"
        >
          <h2
            style="text-align: center;"
          >
            Interests & skills
          </h2>
           
          <br />
        </div>
         
        <div
          class="floatable-bordered floatable-bordered-bottom"
        >
          <br />
           
          <div
            class="row"
          >
            <div
              class="col-xs-10 col-xs-offset-1"
            >
              <!---->
               
              <div
                class="form-group"
              >
                <label>
                  People might want to help if they are interested in:
                </label>
                 
                <div>
                   
                  <select
                    class="form-control list-item"
                  >
                    <option
                      disabled="disabled"
                      value=""
                    />
                     
                  </select>
                   
                  <button
                    class="btn btn-primary"
                    disabled="disabled"
                  >
                    Add another
                  </button>
                </div>
              </div>
               
              <div
                class="form-group"
              >
                <label>
                  Skills that your helpers will need:
                </label>
                 
                <div>
                   
                  <select
                    class="form-control list-item"
                  >
                    <option
                      disabled="disabled"
                      value=""
                    />
                     
                  </select>
                   
                  <button
                    class="btn btn-primary"
                    disabled="disabled"
                  >
                    Add another
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <br />
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="row"
    >
      <div
        class="col-xs-12 col-sm-8 col-sm-offset-2"
      >
        <div
          class="floatable-bordered"
        >
          <h2
            style="text-align: center;"
          >
            Time required
          </h2>
           
          <br />
        </div>
         
        <div
          class="floatable-bordered floatable-bordered-bottom"
        >
          <br />
           
          <div
            class="row"
          >
            <div
              class="col-xs-10 col-xs-offset-1"
            >
              <!---->
               
              <label>
                How much time is required?
              </label>
               
              <div
                class="form-group"
              >
                <select
                  id="timeAmount"
                >
                  <option
                    disabled="disabled"
                    value=""
                  />
                   
                  <option>
                    1hr
                  </option>
                   
                  <option>
                    2hr
                  </option>
                   
                  <option>
                    3hr
                  </option>
                   
                  <option>
                    4hr
                  </option>
                   
                  <option>
                    1day
                  </option>
                   
                  <option>
                    2days
                  </option>
                   
                  <option>
                    3days
                  </option>
                </select>
                 
                <span>
                  per
                </span>
                 
                <select
                  id="timeFrequency"
                >
                  <option
                    disabled="disabled"
                    value=""
                  />
                   
                  <option>
                    Week
                  </option>
                   
                  <option>
                    Month
                  </option>
                </select>
              </div>
               
              <div
                class="form-group"
              >
                <!---->
                 
                <label
                  class="checkbox"
                >
                  What slots can people help with?
                </label>
                 
                <label
                  class="checkbox-inline"
                >
                  <input
                    id="weekday"
                    type="checkbox"
                    value="TimeslotWeekday"
                  />
                   Weekday
      
                </label>
                 
                <label
                  class="checkbox-inline"
                >
                  <input
                    id="weekend"
                    type="checkbox"
                    value="TimeslotWeekend"
                  />
                   Weekend
      
                </label>
                 
                <label
                  class="checkbox-inline"
                >
                  <input
                    id="evening"
                    type="checkbox"
                    value="TimeslotEvening"
                  />
                   Evening
      
                </label>
                 
                <label
                  class="checkbox-inline"
                >
                  <input
                    id="daytime"
                    type="checkbox"
                    value="TimeslotDaytime"
                  />
                   Daytime
      
                </label>
              </div>
            </div>
          </div>
        </div>
         
        <br />
      </div>
    </div>
  </div>
   
  <div
    class="row"
  >
    <div
      class="col-xs-12 col-sm-8 col-sm-offset-2"
    >
      <div
        class="row"
      >
        <div
          class="col-xs-10 col-xs-offset-1"
        >
          <!---->
           
          <!---->
           
          <button
            class="btn btn-primary"
            style="width: 100%; text-align: center;"
          >
            
            Create
            
          </button>
           
          <br />
          <br />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`post edit form has the expected HTML when all checks are triggered (i.e. all data is missing) 1`] = `
<div
  style="background-color: rgb(255, 250, 250);"
>
  <div
    class="row"
  >
    <div
      class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3"
    >
      <h4
        style="color: rgb(235, 113, 180); text-align: center;"
      >
        Create post
      </h4>
    </div>
  </div>
   
  <div>
    <div
      class="row"
    >
      <div
        class="col-xs-12 col-sm-8 col-sm-offset-2"
      >
        <div
          class="floatable-bordered"
        >
          <h2
            style="text-align: center;"
          >
            What do you need
          </h2>
           
          <br />
        </div>
         
        <div
          class="floatable-bordered floatable-bordered-bottom"
        >
          <br />
           
          <div
            class="row"
          >
            <div
              class="col-xs-10 col-xs-offset-1"
            >
              <div
                class="alert alert-danger strong"
                role="alert"
              >
                <p>
                  Give your post a title that will help them understand the outline of what you need
                </p>
              </div>
               
              <div
                class="form-group"
              >
                <label
                  for="title"
                >
                  Title
                </label>
                 
                <input
                  class="form-control"
                  id="title"
                  type="text"
                />
              </div>
               
              <div
                class="alert alert-danger strong"
                role="alert"
              >
                <p>
                  Be descriptive about the details of what you need
                </p>
              </div>
               
              <div
                class="form-group"
              >
                <label>
                  Give some more details
                </label>
                <br />
                 
                <textarea
                  class="form-control"
                  placeholder="Give the details about what you need, things to think about:
- Telling us a bit about the background of why you need help
- Give plenty of detail about the activity
- Dig down into details of any specialist skills / experience needed
- Tell us what kind of person you would like to help out
- Be nice!"
                  rows="5"
                />
              </div>
            </div>
          </div>
        </div>
         
        <br />
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="row"
    >
      <div
        class="col-xs-12 col-sm-8 col-sm-offset-2"
      >
        <div
          class="floatable-bordered"
        >
          <h2
            style="text-align: center;"
          >
            Location
          </h2>
           
          <br />
        </div>
         
        <div
          class="floatable-bordered floatable-bordered-bottom"
        >
          <br />
           
          <div
            class="row"
          >
            <div
              class="col-xs-10 col-xs-offset-1"
            >
              <div
                class="alert alert-danger strong"
                role="alert"
              >
                <p>
                  Please let your helpers know where they need to be - either add specific locations,
        or select remote, or both
      
                </p>
              </div>
               
              <label>
                Where do you need help?
              </label>
               
              <div
                class="form-group"
              >
                <label
                  class="checkbox-inline"
                >
                  <input
                    id="remoteLocation"
                    type="checkbox"
                    value="true"
                  />
                  Can help be given remotely?
      
                </label>
              </div>
               
              <div
                class="form-group"
              >
                <label>
                  At specific locations:
                </label>
                 
                <div>
                   
                  <select
                    class="form-control list-item"
                  >
                    <option
                      disabled="disabled"
                      value=""
                    />
                     
                  </select>
                   
                  <button
                    class="btn btn-primary"
                    disabled="disabled"
                  >
                    Add another
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <br />
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="row"
    >
      <div
        class="col-xs-12 col-sm-8 col-sm-offset-2"
      >
        <div
          class="floatable-bordered"
        >
          <h2
            style="text-align: center;"
          >
            Interests & skills
          </h2>
           
          <br />
        </div>
         
        <div
          class="floatable-bordered floatable-bordered-bottom"
        >
          <br />
           
          <div
            class="row"
          >
            <div
              class="col-xs-10 col-xs-offset-1"
            >
              <div
                class="alert alert-danger strong"
                role="alert"
              >
                <p>
                  Please add some interests or skills - the more you add, the easier it will be hard for helpers to match you
                </p>
              </div>
               
              <div
                class="form-group"
              >
                <label>
                  People might want to help if they are interested in:
                </label>
                 
                <div>
                   
                  <select
                    class="form-control list-item"
                  >
                    <option
                      disabled="disabled"
                      value=""
                    />
                     
                  </select>
                   
                  <button
                    class="btn btn-primary"
                    disabled="disabled"
                  >
                    Add another
                  </button>
                </div>
              </div>
               
              <div
                class="form-group"
              >
                <label>
                  Skills that your helpers will need:
                </label>
                 
                <div>
                   
                  <select
                    class="form-control list-item"
                  >
                    <option
                      disabled="disabled"
                      value=""
                    />
                     
                  </select>
                   
                  <button
                    class="btn btn-primary"
                    disabled="disabled"
                  >
                    Add another
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <br />
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="row"
    >
      <div
        class="col-xs-12 col-sm-8 col-sm-offset-2"
      >
        <div
          class="floatable-bordered"
        >
          <h2
            style="text-align: center;"
          >
            Time required
          </h2>
           
          <br />
        </div>
         
        <div
          class="floatable-bordered floatable-bordered-bottom"
        >
          <br />
           
          <div
            class="row"
          >
            <div
              class="col-xs-10 col-xs-offset-1"
            >
              <div
                class="alert alert-danger strong"
                role="alert"
              >
                <p>
                  Please fill this out - it's important for your helpers to be able to match with you
        and plan their time
                </p>
              </div>
               
              <label>
                How much time is required?
              </label>
               
              <div
                class="form-group"
              >
                <select
                  id="timeAmount"
                >
                  <option
                    disabled="disabled"
                    value=""
                  />
                   
                  <option>
                    1hr
                  </option>
                   
                  <option>
                    2hr
                  </option>
                   
                  <option>
                    3hr
                  </option>
                   
                  <option>
                    4hr
                  </option>
                   
                  <option>
                    1day
                  </option>
                   
                  <option>
                    2days
                  </option>
                   
                  <option>
                    3days
                  </option>
                </select>
                 
                <span>
                  per
                </span>
                 
                <select
                  id="timeFrequency"
                >
                  <option
                    disabled="disabled"
                    value=""
                  />
                   
                  <option>
                    Week
                  </option>
                   
                  <option>
                    Month
                  </option>
                </select>
              </div>
               
              <div
                class="form-group"
              >
                <div
                  class="alert alert-danger strong"
                  role="alert"
                >
                  <p>
                    Please fill this out - helpers need to know what slots you need them
                  </p>
                </div>
                 
                <label
                  class="checkbox"
                >
                  What slots can people help with?
                </label>
                 
                <label
                  class="checkbox-inline"
                >
                  <input
                    id="weekday"
                    type="checkbox"
                    value="TimeslotWeekday"
                  />
                   Weekday
      
                </label>
                 
                <label
                  class="checkbox-inline"
                >
                  <input
                    id="weekend"
                    type="checkbox"
                    value="TimeslotWeekend"
                  />
                   Weekend
      
                </label>
                 
                <label
                  class="checkbox-inline"
                >
                  <input
                    id="evening"
                    type="checkbox"
                    value="TimeslotEvening"
                  />
                   Evening
      
                </label>
                 
                <label
                  class="checkbox-inline"
                >
                  <input
                    id="daytime"
                    type="checkbox"
                    value="TimeslotDaytime"
                  />
                   Daytime
      
                </label>
              </div>
            </div>
          </div>
        </div>
         
        <br />
      </div>
    </div>
  </div>
   
  <div
    class="row"
  >
    <div
      class="col-xs-12 col-sm-8 col-sm-offset-2"
    >
      <div
        class="row"
      >
        <div
          class="col-xs-10 col-xs-offset-1"
        >
          <div
            class="alert alert-danger strong"
            role="alert"
          >
            <p>
              There are still some missing items, described above, you need to fill these out before you can submit
            </p>
          </div>
           
          <!---->
           
          <button
            class="btn btn-primary"
            disabled="disabled"
            style="width: 100%; text-align: center;"
          >
            
            Create
            
          </button>
           
          <br />
          <br />
        </div>
      </div>
    </div>
  </div>
</div>
`;
